@@ -284,8 +284,8 @@ use constant PARAM_ANYWHERE_MAP => {
                                 'LOWER(mct.key_name) LIKE LOWER(?)' ],
     data_text              => [ 'md.object_instance_id = i.id',
                                 'LOWER(md.short_val) LIKE LOWER(?)' ],
-    output_channel_id      => ['i.id = moc.media_instance__id',
-                               'moc.output_channel__id = ?'],
+    output_channel_id      => [ 'i.id = moc.media_instance__id',
+                                'moc.output_channel__id = ?' ],
     category_uri           => [ 'i.category__id = c.id',
                                 'LOWER(c.uri) LIKE LOWER(?)' ],
     keyword                => [ 'mk.media_id = mt.id AND k.id = mk.keyword_id',
