@@ -408,8 +408,8 @@ use constant PARAM_ANYWHERE_MAP => {
                                 'LOWER(sct.key_name) LIKE LOWER(?)' ],
     data_text              => [ 'sd.object_instance_id = i.id',
                                 'LOWER(sd.short_val) LIKE LOWER(?)' ],
-    output_channel_id      => ['i.id = soc.story_instance__id',
-                               'soc.output_channel__id = ?'],
+    output_channel_id      => [ 'i.id = soc.story_instance__id',
+                                'soc.output_channel__id = ?' ],
     category_id            => [ 'i.id = sc2.story_instance__id',
                                 'sc2.category__id = ?' ],
     primary_category_id    => [ 'i.id = sc2.story_instance__id AND sc2.main = 1',
